# Autotyper

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
src/autotyper/: autotyper.py  lesson.py  typing_keyboard.py
src/core/: autotyper.py  browser_navigator.py  config_loader.py  constants.py  errors.py  lesson.py  typing_keyboard.py
src/utils/: browser_utils.py  keyboard_utils.py  logutil.py
